--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/opendena/ehlo",
   "dependencies": {
+    "mailparser": "^0.5.0",
     "smtp-server": "^1.2.0"
   }
 }
