--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "request": "^2.55.0",
     "smtp-server": "^1.2.0",
     "stream-to-buffer": "^0.1.0"
+  },
+  "devDependencies": {
+    "istanbul": "^0.3.13",
+    "mocha": "^2.2.4"
   }
 }
