--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "./cli.js",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --colors -R spec --bail",
-    "cover": "./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/mocha/bin/_mocha -- test/*.js -R spec -t 5000"
+    "cover": "./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/mocha/bin/_mocha -- test/*.js -R spec -t 5000",
+    "codacy": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/codacy-coverage/bin/codacy-coverage.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "stream-to-buffer": "^0.1.0"
   },
   "devDependencies": {
+    "codacy-coverage": "^1.0.3",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
     "smtp-connection": "^1.2.0"
