--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
+    "sinon": "^1.14.1",
     "smtp-connection": "^1.2.0"
   }
 }
