--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
   },
   "homepage": "https://github.com/opendena/ehlo",
   "dependencies": {
-    "commander": "^2.8.0",
-    "mailparser": "^0.5.0",
-    "request": "^2.55.0",
-    "smtp-server": "^1.2.0",
-    "stream-to-buffer": "^0.1.0",
-    "winston": "^1.0.0"
+    "commander": "~2.8",
+    "mailparser": "~0.5",
+    "request": "~2.55",
+    "smtp-server": "~1.3",
+    "stream-to-buffer": "~0.1",
+    "winston": "~1.0"
   },
   "devDependencies": {
-    "codacy-coverage": "^1.0.3",
-    "coveralls": "^2.11.2",
-    "istanbul": "^0.3.13",
-    "mocha": "^2.2.4",
-    "sinon": "^1.14.1",
-    "smtp-connection": "^1.2.0"
+    "codacy-coverage": "~1.0",
+    "coveralls": "~2.11",
+    "istanbul": "~0.3",
+    "mocha": "~2.2",
+    "sinon": "~1.14",
+    "smtp-connection": "~1.2"
   }
 }
