--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "ehlo",
     "API"
   ],
+  "engines": {
+    "node": ">=0.12"
+  },
   "author": "OpenDena",
   "license": "MIT",
   "bugs": {
