--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ehlo",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "SMTP server to rest",
   "main": "ehlo.js",
   "directories": {
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/opendena/ehlo.git"
+    "url": "https://github.com/ehlo-io/ehlo"
   },
   "keywords": [
     "SMTP",
